<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!-- Row 1: TextView "LOGIN" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center" />
    <!-- Row 2: Username and EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_username" />
    </LinearLayout>
    <!-- Row 3: Password and EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints=""
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </LinearLayout>
    <!-- Row 4: Buttons OK, CANCEL, Forgot Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_submit"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="#800080"
            android:gravity="center" />

<!--        <Button-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="CANCEL"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:background="#800080"-->
<!--            android:gravity="center" />-->

<!--        <Button-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Forgot Password"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:background="#800080"-->
<!--            android:gravity="center" />-->
    </LinearLayout>


</LinearLayout>